samples/_failures_safe/1761504476_885518_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_186d61e4.c: In function ‘main’:
./samples/SAFE/__tmp_186d61e4.c:160:11: error: expected ‘;’ at end of input
  160 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_186d61e4.c:160:5: error: expected declaration or statement at end of input
  160 |     printf
      |     ^~~~~~
